Styled ballot order

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script type="text/javascript" src="/elm.js"></script>
         <link rel="stylesheet" type="text/css" href="/assets/css/senate-ballot.css">
+        <link rel="stylesheet" type="text/css" href="/assets/css/order.css">
     </head>
     <body>
         <script type="text/javascript">
