--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-        <script type="text/javascript" src="/elm.js"></script>
-        <link rel="stylesheet" type="text/css" href="/assets/css/senate-ballot.css">
-        <link rel="stylesheet" type="text/css" href="/assets/css/order.css">
+        <script type="text/javascript" src="./elm.js"></script>
+        <link rel="stylesheet" type="text/css" href="./assets/css/senate-ballot.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/order.css">
     </head>
     <body>
         <script type="text/javascript">
