Added page title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Below the Line (BETA)</title>
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
         <script type="text/javascript" src="./elm.js"></script>
         <link rel="stylesheet" type="text/css" href="./assets/css/senate-ballot.css">
